--- a/package.json
+++ b/package.json
@@ -35,5 +35,17 @@
       "env",
       "react"
     ]
+  },
+  "jest": {
+    "collectCoverage": true,
+    "coveragePathIgnorePatterns": ["<rootDir>/dist/", "<rootDir>/node_modules/"],
+    "coverageThreshold": {
+      "global": {
+        "branches": 100,
+        "functions": 100,
+        "lines": 100,
+        "statements": 100
+      }
+    }
   }
 }
