--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "jest": "^21.2.1",
+    "jest-junit": "^3.1.0",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.3",
     "webpack-merge": "^4.1.0",
@@ -38,7 +39,10 @@
   },
   "jest": {
     "collectCoverage": true,
-    "coveragePathIgnorePatterns": ["<rootDir>/dist/", "<rootDir>/node_modules/"],
+    "coveragePathIgnorePatterns": [
+      "<rootDir>/dist/",
+      "<rootDir>/node_modules/"
+    ],
     "coverageThreshold": {
       "global": {
         "branches": 100,
