--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lint": "eslint src"
   },
   "dependencies": {
+    "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0"
   },
