--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/node:8
+      - image: circleci/node:9
 
     steps:
       - checkout
@@ -18,6 +18,7 @@ jobs:
           paths:
             - node_modules
 
+      - run: yarn lint --format junit -o reports/junit/js-lint-results.xml
       - run:
           command: yarn test --ci --testResultsProcessor="jest-junit"
           environment:
