Add deploy command

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build": "webpack --config webpack.prod.js",
     "start": "webpack-dev-server --open --config webpack.dev.js",
     "test": "jest",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "deploy": "git subtree push --prefix dist origin master"
   },
   "dependencies": {
     "prop-types": "^15.6.0",
