--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "my-contributions.github.io",
   "version": "0.0.1",
   "description": "Show off your open source contributions and check out others",
-  "main": "index.js",
   "homepage": "https://my-contributions.github.io",
   "repository": "github:my-contributions/my-contributions.github.io",
   "author": "Elisey Zanko <elisey.zanko@gmail.com>",
@@ -30,8 +29,9 @@
     "eslint-plugin-react": "^7.5.1",
     "jest": "^22.4.3",
     "jest-junit": "^3.1.0",
-    "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.3",
+    "webpack": "^4.2.0",
+    "webpack-cli": "^2.0.13",
+    "webpack-dev-server": "^3.1.1",
     "webpack-merge": "^4.1.0",
     "whatwg-fetch": "^2.0.3"
   },
