--- a/package.json
+++ b/package.json
@@ -25,10 +25,21 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
     "eslint-plugin-react": "^7.5.1",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "jest": "^22.4.3",
     "jest-junit": "^3.1.0",
+    "node-sass": "^4.8.3",
+    "primer-base": "^1.7.0",
+    "primer-blankslate": "^1.4.5",
+    "primer-buttons": "^2.5.3",
+    "primer-forms": "^2.1.0",
+    "primer-support": "^4.5.2",
+    "primer-utilities": "^4.9.0",
+    "sass-loader": "^6.0.7",
+    "style-loader": "^0.20.3",
     "webpack": "^4.3.0",
     "webpack-cli": "^2.0.13",
     "webpack-dev-server": "^3.1.1",
