Resolve #22: Header UI design

--- a/package.json
+++ b/package.json
@@ -32,12 +32,16 @@
     "jest": "^22.4.3",
     "jest-junit": "^3.1.0",
     "node-sass": "^4.8.3",
+    "octicons": "^7.2.0",
     "primer-base": "^1.7.0",
     "primer-blankslate": "^1.4.5",
     "primer-buttons": "^2.5.3",
     "primer-forms": "^2.1.0",
+    "primer-marketing": "^6.2.0",
+    "primer-marketing-support": "^1.5.0",
     "primer-support": "^4.5.2",
     "primer-utilities": "^4.9.0",
+    "react-svg-loader": "^2.1.0",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
     "webpack": "^4.3.0",
