--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jest-junit": "^3.1.0",
     "node-sass": "^4.8.3",
     "octicons": "^7.2.0",
+    "primer-avatars": "^1.5.2",
     "primer-base": "^1.7.0",
     "primer-blankslate": "^1.4.5",
     "primer-buttons": "^2.5.3",
