--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   },
   "dependencies": {
     "prop-types": "^15.6.0",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "react": "^16.3.0",
+    "react-dom": "^16.3.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -33,6 +33,7 @@
     "jest-junit": "^3.1.0",
     "node-sass": "^4.8.3",
     "octicons": "^7.2.0",
+    "primer-avatars": "^1.5.2",
     "primer-base": "^1.7.0",
     "primer-blankslate": "^1.4.5",
     "primer-buttons": "^2.5.3",
@@ -44,11 +45,11 @@
     "react-svg-loader": "^2.1.0",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
-    "webpack": "^4.3.0",
+    "webpack": "^4.4.1",
     "webpack-cli": "^2.0.13",
     "webpack-dev-server": "^3.1.1",
     "webpack-merge": "^4.1.0",
-    "whatwg-fetch": "^2.0.3"
+    "whatwg-fetch": "^2.0.4"
   },
   "babel": {
     "presets": [
