--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint": "eslint src"
   },
   "dependencies": {
+    "github-colors": "^2.2.17",
     "prop-types": "^15.6.0",
     "react": "^16.3.0",
     "react-dom": "^16.3.0"
