--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
   },
   "dependencies": {
     "github-colors": "^2.2.17",
+    "moment": "^2.22.1",
     "prop-types": "^15.6.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
-    "babel-jest": "^22.4.4",
+    "babel-jest": "^23.0.0",
     "babel-loader": "^7.1.2",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
@@ -30,7 +31,7 @@
     "eslint": "^4.19.1",
     "eslint-plugin-react": "^7.8.2",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "jest": "^22.4.4",
+    "jest": "^23.0.0",
     "jest-junit": "^4.0.0",
     "node-sass": "^4.9.0",
     "octicons": "^7.3.0",
